# oee-calc-lib

./: .gitignore  README.md  pyproject.toml  setup.py
oee_lib/: calculator.py
src/oee_lib/: calculator.py
src/oee_lib_sergio_oliveira/: calculator.py
