# pyproject.toml

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "performance_calculator"
version = "1.0.0"
authors = [
    { name="Sergio Oliveira", email="oliveira-sergio@outlook.com" },
]

description = "A simple Python OEE Calculator"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
"Homepage" = "https://github.com/sergio-oliveira-br/oee-calc-lib"
"Bug Tracker" = "https://github.com/sergio-oliveira-br/oee-calc-lib/issues"

[tool.hatch.build.targets.wheel]
packages = ["src"]
